--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Gmail SMTP 設定
-GMAIL_USER=tyouxipindao@gmail.com
-GMAIL_APP_PASSWORD=ecaouqoalpxxsswi
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASSWORD=your-app-password
 
 # 網站設定
 NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
