--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
     "react": "^18",
     "react-dom": "^18",
