Security: Complete environment variables setup and remove hardcoded credentials
- Remove hardcoded Gmail credentials from API routes
- Add secure configuration management in src/lib/config.ts
- Update environment variables example file
- Add deployment security documentation
- Ensure sensitive information is not exposed in frontend code

--- a/env.example
+++ b/env.example
@@ -5,6 +5,7 @@ GMAIL_APP_PASSWORD=your-app-password
 # 網站設定
 NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
 NEXT_PUBLIC_SITE_NAME=Kevin.
+NEXT_PUBLIC_CONTACT_EMAIL=your-email@gmail.com
 
 # 環境設定
 NODE_ENV=production
