--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.0",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "next-themes": "^0.4.6",
