--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material/button": "^14.0.0",
+    "@material/card": "^14.0.0",
+    "@material/textfield": "^14.0.0",
+    "@material/typography": "^14.0.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/three": "^0.181.0",
     "framer-motion": "^10.16.0",
+    "gsap": "^3.12.5",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
-    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.292.0",
+    "material-components-web": "^14.0.0",
     "next": "^14.2.32",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.7.3"
+    "react-i18next": "^15.7.3",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "^20",
