--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@material/button": "^14.0.0",
     "@material/card": "^14.0.0",
     "@material/textfield": "^14.0.0",
@@ -21,7 +22,7 @@
     "gsap": "^3.12.5",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
-    "lucide-react": "^0.292.0",
+    "lenis": "^1.3.15",
     "material-components-web": "^14.0.0",
     "next": "^14.2.32",
     "next-themes": "^0.4.6",
