新增 AI 助理功能：支援流式回應、對話歷史持久化、快捷問題建議和響應式設計

--- a/env.example
+++ b/env.example
@@ -7,5 +7,8 @@ NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
 NEXT_PUBLIC_SITE_NAME=Kevin.
 NEXT_PUBLIC_CONTACT_EMAIL=your-email@gmail.com
 
+# Groq AI 設定
+GROQ_API_KEY=your-groq-api-key
+
 # 環境設定
 NODE_ENV=production
