改用客戶端直接調用 Groq API，移除 Next.js API 路由依賴

--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@ NEXT_PUBLIC_CONTACT_EMAIL=your-email@gmail.com
 
 # Groq AI 設定
 GROQ_API_KEY=your-groq-api-key
+NEXT_PUBLIC_GROQ_API_KEY=your-groq-api-key
 
 # 環境設定
 NODE_ENV=production
