--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material/typography": "^14.0.0",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@tanstack/react-virtual": "^3.13.13",
     "@types/nodemailer": "^7.0.1",
     "@types/three": "^0.181.0",
     "framer-motion": "^10.16.0",
