--- a/env.example
+++ b/env.example
@@ -11,5 +11,9 @@ NEXT_PUBLIC_CONTACT_EMAIL=your-email@gmail.com
 GROQ_API_KEY=your-groq-api-key
 NEXT_PUBLIC_GROQ_API_KEY=your-groq-api-key
 
+# Cloudflare Turnstile 設定
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=your-turnstile-site-key
+TURNSTILE_SECRET_KEY=your-turnstile-secret-key
+
 # 環境設定
 NODE_ENV=production
