--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/nodemailer": "^7.0.1",
     "@types/three": "^0.181.0",
     "framer-motion": "^10.16.0",
+    "groq-sdk": "^0.37.0",
     "gsap": "^3.12.5",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
