--- a/env.example
+++ b/env.example
@@ -7,8 +7,8 @@ NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
 NEXT_PUBLIC_SITE_NAME=Kevin.
 NEXT_PUBLIC_CONTACT_EMAIL=your-email@gmail.com
 
-# Groq AI 設定（後端使用，不會暴露到前端）
-GROQ_API_KEY=your-groq-api-key
+# Groq AI 設定（前端使用 - 僅用於應徵展示）
+NEXT_PUBLIC_GROQ_API_KEY=your-groq-api-key
 
 # 環境設定
 NODE_ENV=production
