--- a/env.example
+++ b/env.example
@@ -6,6 +6,8 @@ GMAIL_APP_PASSWORD=your-app-password
 NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
 NEXT_PUBLIC_SITE_NAME=Kevin.
 NEXT_PUBLIC_CONTACT_EMAIL=your-email@gmail.com
+NEXT_PUBLIC_PRIMARY_DOMAIN=https://www.kevinoffical.com
+NEXT_PUBLIC_BACKUP_DOMAIN=https://kevinoffical.vercel.app
 
 # Groq AI 設定（後端使用 - 安全保護）
 GROQ_API_KEY=your-groq-api-key
