--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "lenis": "^1.3.15",
     "material-components-web": "^14.0.0",
     "next": "^14.2.32",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.7.3",
-    "three": "^0.181.2"
+    "sharp": "^0.34.5",
+    "three": "^0.181.2",
+    "workbox-webpack-plugin": "^7.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
