--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
     "@material/button": "^14.0.0",
     "@material/card": "^14.0.0",
     "@material/textfield": "^14.0.0",
